<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/team_a"
                android:textAlignment="gravity"
                android:textColor="#616161"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:text="@string/starting_score"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="threePointsA"
                android:text="@string/add3points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="twoPointsA"
                android:text="@string/add2points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onePointA"
                android:text="@string/add1point" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:fontFamily="cursive"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls"
                    android:textAlignment="gravity"
                    android:textColor="#616161"
                    android:textSize="28sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="4dp"
                    android:text="@string/starting_fouls"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="28sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFoulA"
                android:text="@string/add1foul" />


        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="@string/team_b"
                android:textAlignment="gravity"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="10dp"
                android:text="@string/starting_score"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="threePointsB"
                android:text="@string/add3points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="twoPointsB"
                android:text="@string/add2points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="onePointB"
                android:text="@string/add1point" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:fontFamily="cursive"
                    android:gravity="center_horizontal"
                    android:text="@string/fouls"
                    android:textAlignment="gravity"
                    android:textColor="#616161"
                    android:textSize="28sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="4dp"
                    android:text="@string/starting_fouls"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="28sp" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFoulB"
                android:text="@string/add1foul" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="48dp"
        android:onClick="resetFouls"
        android:text="@string/reset_fouls" />
    <Button
        android:id="@+id/reset_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="resetScoreFouls"
        android:text="@string/reset_counter" />


</RelativeLayout>